--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "cmdk": "^1.0.0",
     "compressorjs": "^1.2.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
@@ -65,9 +66,11 @@
     "gsap": "^3.12.5",
     "input-otp": "^1.2.4",
     "katex": "^0.16.9",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
+    "openai": "^4.97.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
@@ -86,6 +89,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.16",
     "lint-staged": "^15.5.1",
     "pre-commit": "^1.2.2",
     "prettier": "^3.5.3"
