--- a/package.json
+++ b/package.json
@@ -78,8 +78,12 @@
 		"react-dropzone": "^14.2.3",
 		"react-hook-form": "^7.53.0",
 		"react-katex": "^3.0.1",
+		"react-markdown": "^10.1.0",
 		"react-resizable-panels": "^2.1.3",
+		"react-syntax-highlighter": "^15.6.1",
 		"recharts": "^2.12.7",
+		"rehype-katex": "^7.0.1",
+		"remark-math": "^6.0.0",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss": "3.3.3",
@@ -90,6 +94,7 @@
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.17.16",
+		"@types/react-syntax-highlighter": "^15.5.13",
 		"lint-staged": "^15.5.1",
 		"pre-commit": "^1.2.2",
 		"prettier": "^3.5.3"
